[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Interface/MessageInterface.png" type="Texture" id=3]
[ext_resource path="res://Fonts/BKANT.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DialogueContainer/DialogueButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContainer" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -50.0
margin_right = 46.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueLabel" type="Label" parent="DialogueContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -3.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Aaaaah!!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueButton" type="Button" parent="DialogueContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = 29.6291
margin_right = 31.0
margin_bottom = 47.6291
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Seguinte"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animator" type="AnimationPlayer" parent="."]
anims/BlinkAnimation = SubResource( 3 )
[connection signal="pressed" from="DialogueContainer/DialogueButton" to="." method="onNextButtonPressed"]
